change add comment text

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,7 +20,7 @@
                 description="show comment list">
             <add-to-group group-id="CodeMenu" anchor="first"/>
         </action>
-        <action id="action.CodeSelectAction" class="action.CodeSelectAction" text="add comment" description="test">
+        <action id="action.CodeSelectAction" class="action.CodeSelectAction" text="Add Comment" description="add review comment">
             <add-to-group group-id="EditorPopupMenu" anchor="first"/>
         </action>
     </actions>
